[gd_scene load_steps=2 format=3 uid="uid://btqbbiv4q8h31"]

[ext_resource type="Script" path="res://simon.gd" id="1_8w12p"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_8w12p")

[node name="Bleu" type="ColorRect" parent="."]
offset_left = 203.0
offset_top = 88.0
offset_right = 243.0
offset_bottom = 128.0
color = Color(0.0995428, 0.419056, 0.799543, 1)

[node name="Orange" type="ColorRect" parent="."]
offset_left = 141.0
offset_top = 93.0
offset_right = 181.0
offset_bottom = 133.0
color = Color(0.949135, 0.761208, 0.260974, 1)

[node name="Vert" type="ColorRect" parent="."]
offset_left = 201.0
offset_top = 32.0
offset_right = 241.0
offset_bottom = 72.0
color = Color(0.54902, 0.996078, 0.243137, 1)

[node name="Rose" type="ColorRect" parent="."]
offset_left = 140.0
offset_top = 30.0
offset_right = 180.0
offset_bottom = 70.0
color = Color(0.772689, 0.166053, 0.701034, 1)

[connection signal="gui_input" from="Bleu" to="." method="_on_bleu_gui_input"]
[connection signal="gui_input" from="Orange" to="." method="_on_orange_gui_input"]
[connection signal="gui_input" from="Vert" to="." method="_on_vert_gui_input"]
[connection signal="gui_input" from="Rose" to="." method="_on_rose_gui_input"]
